--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -29,3 +29,14 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+  defaultConfig {
+       applicationId "tokyo.pentagon.auth0sample"
+       minSdkVersion 18
+       targetSdkVersion 28
+       versionCode flutterVersionCode.toInteger()
+       versionName flutterVersionName
+       manifestPlaceholders = [
+               'appAuthRedirectScheme': 'tokyo.pentagon.auth0sample'
+       ]
+   }
