--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,7 +32,14 @@ dependencies:
   flutter:
     sdk: flutter
   dropdown_button2: ^1.8.2
-
+  flutter_native_splash: ^2.2.7
+  url_launcher: ^6.0.0-nullsafety
+  flutter_dotenv: any
+  dio: ^4.0.6
+  http: ^0.13.5
+  flutter_appauth: ^4.2.0
+  flutter_secure_storage: ^6.0.0
+  provider: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -48,6 +55,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+flutter_native_splash:
+  image: "assets/haw_logo.png"
+  color: "#FAFAFA"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -59,7 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
