--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: any
   image_picker: ^0.8.5+3
+  firebase_core: ^1.23.0
 
 dev_dependencies:
   flutter_test:
