--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: any
   image_picker: ^0.8.5+3
   firebase_core: ^1.23.0
+  firebase_auth: ^3.10.0
 
 dev_dependencies:
   flutter_test:
