--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  uuid: ^3.0.6
   intl: any
   image_picker: ^0.8.5+3
   firebase_core: ^1.23.0
   firebase_auth: ^3.10.0
+  firebase_storage: ^10.3.9
 
 dev_dependencies:
   flutter_test:
