--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,9 +40,15 @@ dependencies:
   uuid: ^3.0.6
   intl: any
   image_picker: ^0.8.5+3
-  firebase_core: ^1.23.0
-  firebase_auth: ^3.10.0
-  firebase_storage: ^10.3.9
+#  firebase_core: ^1.23.0
+#  firebase_auth: ^3.10.0
+#  firebase_storage: ^10.3.9
+#  cloud_firestore: ^3.4.9
+
+  firebase_core: ^1.5.0
+  firebase_auth: ^3.0.2
+  firebase_storage: ^10.0.2
+  cloud_firestore: ^2.5.0
 
 dev_dependencies:
   flutter_test:
