--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_core: ^1.23.0
   firebase_auth: ^3.10.0
   firebase_storage: ^10.3.9
+  google_fonts: ^2.1.0
+  flutter_dotenv: any
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
